--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -94,27 +94,7 @@ section[data-name='header'] {
 
   div[data-name='progress'] {
     width: 40%;
-
-    div[data-name='progress-bar'] {
-      height: 1rem;
-      width: 100%;
-      background-color: $neutral;
-      border-radius: 5px;
-
-      div[data-name='progress-bar-inner'] {
-        height: 100%;
-        background-color: $blue;
-        border-radius: 5px;
-
-        div[data-name='progress-bar-inner-inner'] {
-          background-color: green;
-          height: 100%;
-          border-radius: 5px;
-        }
-      }
-    }
-    div[data-name='progress-text'] {
-      display: flex;
+    display: flex;   
       gap: 1rem;
       align-items: center;
       justify-content: space-between;
@@ -124,7 +104,6 @@ section[data-name='header'] {
         flex-direction: column;
         align-items: center;
       }
-    }
   }
 
   div[data-name='header-buttons-container'] {
@@ -302,6 +281,7 @@ section[data-name='header'] {
     dialog[data-name='user-dialog'] {
       border-radius: 10px;
       border: none;
+      width: 400px;
 
       button[data-name='close-dialog'] {
         position: absolute;
@@ -404,6 +384,9 @@ dialog[data-name='athena-dialog'] {
   border: none;
   border-radius: 10px;
   padding: 0;
+  top: 0;
+  left: 0;
+  transform: none;
 
   button[data-name='close-dialog'] {
     position: absolute;
@@ -675,8 +658,40 @@ dialog[data-name='athena-dialog'] {
         div[data-component='svelte-radar-datatable'] {
           max-height: 50%;
           overflow-y: auto;
-          table {
-            overflow-y: auto;
+          div[data-component='datatable-content'] {
+            table {
+              overflow-y: auto;
+              colgroup {
+                col {
+                  min-width: 50px;
+                }
+
+                :first-child {
+                  min-width: 70px;
+                }
+              }
+
+              thead {
+                tr[data-name='titles'] {
+                  th {
+                    div[data-name='column-resize'] {
+                      min-width: 70px;
+                    }
+                  }
+                }
+        
+                tr[data-name='filters'] {
+                  th {
+                    min-width: 70px;
+                    div[data-name='column-filter'] {
+                      input {
+                        min-width: 40px;
+                      }
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -877,204 +892,38 @@ div[data-name='custom-concepts'] {
   display: none;
 }
 
-div[data-component='full-datatable'] {
-  display: block;
-  box-sizing: border-box;
-  overscroll-behavior: contain;
-  outline: none;
-  position: relative;
-  user-select: none;
-
-  div[data-component='svelte-radar-datatable'] {
-    box-sizing: border-box;
-    overflow-x: auto;
-    max-width: 100vw;
+div[data-component='svelte-radar-datatable'] {
+  div[data-component='datatable-content'] {
+    max-width: none;
+    max-height: none;
+    overflow: hidden;
 
     table {
-      //width:0 breaks table component array as data source and file as data source
-      //line-height: 20px;
-      border-collapse: separate;
-      table-layout: fixed;
-      margin: 0;
-      empty-cells: show;
-      border: 0px;
-      //width: 0;
-      border-spacing: 0px;
+      colgroup {
+        col {
+          min-width: 130px;
+        }
+
+        :first-child {
+          min-width: 140px;
+        }
+      }
 
       thead {
-        display: table-header-group;
-        vertical-align: middle;
-        background-color: inherit;
-
         tr[data-name='titles'] {
-          th:hover {
-            background-color: $neutral-xx-light;
-          }
-
-          th[data-name='action-Column'] {
-            width: 75px;
+          th {
+            div[data-name='column-resize'] {
+              min-width: 130px;
+            }
           }
         }
 
         tr[data-name='filters'] {
           th {
-            padding-bottom: 5px;
-          }
-        }
-
-        tr {
-          display: table-row;
-          padding: 0.35em;
-          font-size: 12px;
-
-          th {
-            display: table-cell;
-            box-sizing: content-box;
-
-            div[data-name='column-reposition'] {
-              display: flex;
-
-              :first-child {
-                flex: 1 1 auto;
-              }
-
+            min-width: 130px;
+            div[data-name='column-filter'] {
               input {
-                background-color: #fff;
-                border-radius: 5px;
-                border: 1px solid $neutral-x-light;
-                font-size: 0.75rem;
-                height: 25px;
-                padding: 0 0.5rem;
-              }
-
-              input:hover {
-                border: 1px solid $neutral-xx-dark;
-              }
-
-              input:focus {
-                outline: none;
-                box-shadow: 0 0 0 2px $neutral-x-dark;
-              }
-
-              button {
-                cursor: pointer;
-                background-color: inherit;
-                border: none;
-                height: auto;
-              }
-
-              button:hover {
-                background-color: $neutral-x-light;
-              }
-
-              button:focus {
-                outline: none;
-                box-shadow: 0 0 0 2px $neutral-x-dark;
-              }
-            }
-
-            div[data-name='column-resize'] {
-              display: flex;
-
-              div[data-name='column-resize-right'] {
-                flex: 0 0 auto;
-                width: 3px;
-                cursor: col-resize;
-              }
-
-              div[data-name='column-reposition'] {
-                flex: 1 1 auto;
-              }
-
-              div[data-name='column-resize-left'] {
-                flex: 0 0 auto;
-                width: 3px;
-                cursor: col-resize;
-              }
-            }
-          }
-        }
-      }
-
-      tfoot {
-        tr[data-name='pagination'] {
-          vertical-align: bottom;
-
-          th {
-            div {
-              display: flex;
-              align-items: center;
-
-              button[data-name='settings-button'] {
-                border: none;
-                background-color: inherit;
-              }
-
-              button[data-name='settings-button']:hover {
-                background-color: $neutral-x-light;
-              }
-
-              button[data-name='settings-button']:focus {
-                outline: none;
-                box-shadow: 0 0 0 2px $neutral-x-dark;
-              }
-
-              div[data-name='pagination-container'] {
-                width: 100%;
-                margin-left: 5px;
-
-                p {
-                  padding-right: 5px;
-                  padding-left: 5px;
-                }
-
-                select {
-                  cursor: pointer;
-                  display: inline-block;
-                  font-size: 1em;
-                  max-width: 100%;
-                  outline: 0;
-                  height: 25px;
-                  align-self: center;
-                  border-radius: 5px;
-                  border: solid 1px $neutral-xx-dark;
-                }
-              }
-
-              div[data-name='pagination-container-pages'] {
-                margin-left: auto;
-                text-align: right;
-                float: right;
-                height: 30px;
-                margin-top: 5px;
-                padding: 0;
-
-                button {
-                  border: none;
-                  border-radius: 5px;
-                  background-color: inherit;
-
-                  &:not([data-active='true']):hover:enabled {
-                    background-color: #333;
-                    color: #fff;
-                    border: none;
-                  }
-
-                  &[data-active='true'] {
-                    color: #333;
-                    font-weight: bolder;
-                    padding-bottom: 2.8px;
-                  }
-                }
-
-                button:hover {
-                  background-color: $neutral-x-light;
-                }
-
-                button:focus {
-                  outline: none;
-                  box-shadow: 0 0 0 2px $neutral-x-dark;
-                }
+                min-width: 100px;
               }
             }
           }
@@ -1082,111 +931,27 @@ div[data-component='full-datatable'] {
       }
 
       tbody {
-        display: table-row-group;
-        vertical-align: middle;
-        border-color: inherit;
-
-        tr:nth-child(even) {
-          background: #fff;
-        }
-
-        tr:nth-child(odd) {
-          background: #e2e8f3;
-        }
-
-        tr:hover {
-          background-color: $neutral-x-light;
-        }
-
         tr {
           td[data-name='actions-grid'] {
+            min-width: 140px;
             display: grid;
-            grid-template-columns: repeat(4, min-content);
-            grid-template-rows: repeat(2, min-content);
-            width: max-content;
-            padding-right: 1.5rem;
-
-            button {
-              cursor: pointer;
-              border-radius: 5px;
-              border: 1px solid $neutral-x-light;
-              justify-content: center;
-              text-align: center;
-              font-size: 0.75em;
-              height: 25px;
-            }
-
-            button:hover {
-              background-color: $neutral-x-light;
-            }
-
-            button:focus {
-              outline: none;
-              box-shadow: 0 0 0 2px $neutral-x-dark;
-            }
-
-            div[data-name='numberOfConceptIds'] {
-              border: 1px solid $darkgray;
-              border-radius: 100%;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-            }
-          }
-
-          td[data-name='actions'] {
-            button {
-              cursor: pointer;
-              border-radius: 5px;
-              border: 1px solid $neutral-x-light;
-              justify-content: center;
-              text-align: center;
-              font-size: 0.75em;
-              height: 25px;
-            }
-
-            button:hover {
-              background-color: $neutral-x-dark;
-            }
-
-            button:focus {
-              outline: none;
-              box-shadow: 0 0 0 2px $neutral-xx-dark;
-            }
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(2, 1fr);
           }
 
           td {
-            @keyframes moving-gradient {
-              0% {
-                background-position: -250px 0;
-              }
-
-              100% {
-                background-position: 250px 0;
-              }
-            }
-
             p {
-              display: block;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              margin: 0;
-              -webkit-line-clamp: 2;
-              white-space: initial;
-              display: -webkit-box;
-              -webkit-line-clamp: 2;
-              -webkit-box-orient: vertical;
+              white-space: normal;
             }
           }
-        }
-
-        div[data-name='info'] {
-          left: 50%;
-          text-align: center;
         }
       }
     }
   }
+}
+
+button {
+  white-space: normal;
 }
 
 dialog[data-name='settings-dialog'] {
@@ -1232,4 +997,12 @@ dialog[data-name='settings-dialog'] {
       align-items: center;
     }
   }
+}
+
+dialog {
+  top: 0;
+  left: 0;
+  transform: none;
+  width: min-content;
+  height: min-content;
 }
