updated to new package of datatable & added data

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -655,7 +655,7 @@ dialog[data-name='athena-dialog'] {
         max-height: 60%;
         overflow: auto;
 
-        div[data-component='svelte-radar-datatable'] {
+        div[data-component='svelte-datatable'] {
           max-height: 50%;
           overflow-y: auto;
           div[data-component='datatable-content'] {
@@ -892,7 +892,7 @@ div[data-name='custom-concepts'] {
   display: none;
 }
 
-div[data-component='svelte-radar-datatable'] {
+div[data-component='svelte-datatable'] {
   div[data-component='datatable-content'] {
     max-width: none;
     max-height: none;
