--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -650,9 +650,52 @@ dialog[data-name='athena-dialog'] {
           }
         }
       }
+
+      div[data-name='concept-choice'] {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 2rem 1rem 2rem;
+
+        button {
+          width: 45%;
+          border: 1px solid $neutral-x-light;
+          border-radius: 5px;
+          background-color: inherit;
+          cursor: pointer;
+          display: flex;
+          padding: 0;
+
+          label {
+            text-align: center;
+            width: 100%;
+            height: 100%;
+            padding: 0.5rem 0;
+            cursor: pointer;
+          }
+
+          input {
+            display: none;
+          }
+        }
+
+        button:has(input[type='radio']:checked) {
+          background-color: $neutral;
+        }
+
+        button:hover {
+          background-color: $neutral-x-light;
+        }
+
+        button:active {
+          outline: none;
+          box-shadow: 0 0 0 2px $neutral-x-dark;
+        }
+      }
+
       div[data-name='table-container'] {
         padding: 0 1rem;
-        max-height: 60%;
+        max-height: 80%;
         overflow: auto;
 
         div[data-component='svelte-radar-datatable'] {
@@ -696,7 +739,6 @@ dialog[data-name='athena-dialog'] {
         }
       }
       div[data-name='custom-concept-container'] {
-        border-top: 1px solid lightgray;
         padding: 1rem 1rem 3rem 1rem;
 
         h2 {
@@ -704,13 +746,14 @@ dialog[data-name='athena-dialog'] {
           font-weight: 600;
           margin: 0;
           padding: 0 2rem;
+          margin-bottom: 2rem;
         }
 
         table {
+          border-spacing: 10px 10px;
           tr {
+            padding-bottom: 1rem;
             td {
-              padding: 0 1rem;
-
               input {
                 border: 1px solid $neutral-x-light;
                 font-size: 1rem;
