delete custom concepts from CSV when deleted

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -1037,6 +1037,10 @@ div[data-component='svelte-radar-datatable'] {
             p {
               white-space: normal;
             }
+
+            button {
+              padding: 0 0.5rem;
+            }
           }
         }
       }
