--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -1043,6 +1043,34 @@ div[data-name='drag-drop'] {
     margin: auto;
     padding: 10rem 0;
     z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    input[type='file'] {
+      display: none;
+    }
+
+    label[data-name='file-upload'] {
+      border: 1px solid $neutral-x-light;
+      border-radius: 5px;
+      background-color: $neutral-xxx-light;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      color: black;
+      padding: 1rem;
+    }
+
+    label[data-name='file-upload']:hover {
+      background-color: $neutral-x-light;
+    }
+
+    label[data-name='file-upload']:focus {
+      outline: none;
+      box-shadow: 0 0 0 2px $neutral-x-dark;
+    }
   }
 }
 
