Possible fix for translator bug

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -1187,7 +1187,7 @@ div[data-name='drag-drop'] {
   }
 
   div[data-name='drag-drop-container'] {
-    width: min-content;
+    width: 99vw;
     margin: auto;
     padding: 10rem 0;
     z-index: 10;
